Slimed up header and fixed alignment issues

--- a/src/app/components/profile-card/profile-card.component.scss
+++ b/src/app/components/profile-card/profile-card.component.scss
@@ -1,3 +1,7 @@
+.avatar-button {
+    margin-top: 5px;
+}
+
 .avatar {
     margin-top: 5px;
     width: 32px;
